Clean up flink sql
Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>